handling registry entries

--- a/App/AppInfo/Launcher/WiseFolderHiderPortable.ini
+++ b/App/AppInfo/Launcher/WiseFolderHiderPortable.ini
@@ -5,5 +5,14 @@ DirectoryMoveOK=yes
 [Activate]
 Registry=true
 
+[RegistryKeys]
+WFH=HKLM\SYSTEM\ControlSet001\services\WiseFS
+
+[RegistryCleanupIfEmpty]
+1=HKLM\SYSTEM\ControlSet001\services\WiseFS\Instances\WiseFS Instance
+2=HKLM\SYSTEM\ControlSet001\services\WiseFS\Instances
+3=HKLM\SYSTEM\ControlSet001\services\WiseFS\Enum
+4=HKLM\SYSTEM\ControlSet001\services\WiseFS
+
 [FilesMove]
 Config.ini=%PAL:AppDir%\Wise Folder Hider
